[project]
name = "python-elevate"
version = "0.1.0"
description = "Python example of elevation to Administrator, SYSTEM or TrustedInstaller on Windows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psutil>=7.2.2",
    "pywin32>=312",
    "types-psutil>=7.2.2.20260518",
    "types-pywin32>=312.0.0.20260609",
]
